[gd_scene load_steps=10 format=2]

[ext_resource path="res://Tilemap/Final/World.gd" type="Script" id=1]
[ext_resource path="res://arbre1.tscn" type="PackedScene" id=2]
[ext_resource path="res://arbre1of.tscn" type="PackedScene" id=3]
[ext_resource path="res://autonne1.tscn" type="PackedScene" id=4]
[ext_resource path="res://autonne2.tscn" type="PackedScene" id=5]
[ext_resource path="res://groche_2.tscn" type="PackedScene" id=6]
[ext_resource path="res://groche_4.tscn" type="PackedScene" id=7]
[ext_resource path="res://groche_3.tscn" type="PackedScene" id=8]
[ext_resource path="res://groche_1.tscn" type="PackedScene" id=9]

[node name="World" type="Node"]

script = ExtResource( 1 )

[node name="arbre1" parent="." index="0" instance=ExtResource( 2 )]

[node name="arbre1of" parent="." index="1" instance=ExtResource( 3 )]

[node name="autonne1" parent="." index="2" instance=ExtResource( 4 )]

[node name="autonne2" parent="." index="3" instance=ExtResource( 5 )]

[node name="groche_2" parent="." index="4" instance=ExtResource( 6 )]

[node name="groche_4" parent="." index="5" instance=ExtResource( 7 )]

[node name="groche_3" parent="." index="6" instance=ExtResource( 8 )]

[node name="groche_1" parent="." index="7" instance=ExtResource( 9 )]


